# comap-2023-mcm-wordle

./: .gitignore  1.ipynb  2.ipynb  3.py  OLR_C.py  README.md  data_cleaninig_and_exploration.ipynb  pyproject.toml
data/: cleaned.csv  filtered.csv
